packages/editors/tree-sitter-mx/test/corpus/mx-tags.txt
===============
html and concise tags
===============
<div>
  <span>x</span>
</div>
ul
  li -- one

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (open_tag_end)
    (text)
    (element
      (open_tag_start)
      (tag_name
        (tag_name_fragment))
      (open_tag_end)
      (text)
      (close_tag
        (close_tag_start)
        (close_tag_name)
        (close_tag_end))
      (element_end))
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (concise_open_tag_end)
    (element
      (tag_name
        (tag_name_fragment))
      (concise_open_tag_end)
      (html_block
        (text))
      (element_end))
    (element_end)))

===============
shorthand id and class
===============
<div#main.big.small/>
div#main.big

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (shorthand_id
      (tag_name_fragment))
    (shorthand_class
      (tag_name_fragment))
    (shorthand_class
      (tag_name_fragment))
    (open_tag_end_self)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (shorthand_id
      (tag_name_fragment))
    (shorthand_class
      (tag_name_fragment))
    (concise_open_tag_end)
    (element_end)))

===============
name sugar
===============
<string :title/>
string :title

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (shorthand_name
      (tag_name_fragment))
    (open_tag_end_self)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (shorthand_name
      (tag_name_fragment))
    (concise_open_tag_end)
    (element_end)))

===============
if and for
===============
<if=x>
  <for|i| of=list>
    <li>${i}</li>
  </for>
</if>

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (text)
    (element
      (open_tag_start)
      (tag_name
        (tag_name_fragment))
      (params
        (params_open)
        (params_expr
          (param
            (param_pattern)))
        (params_close))
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (open_tag_end)
      (text)
      (element
        (open_tag_start)
        (tag_name
          (tag_name_fragment))
        (open_tag_end)
        (placeholder
          (placeholder_start)
          (placeholder_expr)
          (placeholder_end))
        (close_tag
          (close_tag_start)
          (close_tag_name)
          (close_tag_end))
        (element_end))
      (text)
      (close_tag
        (close_tag_start)
        (close_tag_name)
        (close_tag_end))
      (element_end))
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
attribute tags
===============
<card>
  <@header>Title</@header>
  <@body>Text</@body>
</card>

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (open_tag_end)
    (text)
    (element
      (open_tag_start)
      (tag_name
        (tag_name_fragment))
      (open_tag_end)
      (text)
      (close_tag
        (close_tag_start)
        (close_tag_name)
        (close_tag_end))
      (element_end))
    (text)
    (element
      (open_tag_start)
      (tag_name
        (tag_name_fragment))
      (open_tag_end)
      (text)
      (close_tag
        (close_tag_start)
        (close_tag_name)
        (close_tag_end))
      (element_end))
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
text placeholder
===============
<p>Hello ${name}!</p>

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (open_tag_end)
    (text)
    (placeholder
      (placeholder_start)
      (placeholder_expr)
      (placeholder_end))
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
import
===============
import { a } from "./a.mx"
<a/>

---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (statement_expr)
    (concise_open_tag_end)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (open_tag_end_self)
    (element_end)))
